--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "criador-de-data-pack",
+  "name": "modificador-de-data-pack",
   "private": true,
   "version": "0.0.0",
   "type": "module",
